[gd_scene load_steps=10 format=2]

[ext_resource path="res://Engine/Stations/MapMachine/map_machine.png" type="Texture" id=1]
[ext_resource path="res://Engine/Stations/MapMachine/MapMachine.gd" type="Script" id=2]
[ext_resource path="res://Engine/dialogue/DialogueTree.tscn" type="PackedScene" id=3]
[ext_resource path="res://Engine/dialogue/DiagPiece.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "running"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 18, 19 ]
}

[sub_resource type="Animation" id=2]
resource_name = "turn_off"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 33, 34, 35, 36, 37, 38 ]
}

[sub_resource type="Animation" id=3]
length = 1.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 9, 5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 49, 44 )

[node name="MapMachine" type="Sprite"]
texture = ExtResource( 1 )
offset = Vector2( 0, -12 )
hframes = 40
frame = 38
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 1.5
anims/running = SubResource( 1 )
anims/turn_off = SubResource( 2 )
anims/turn_on = SubResource( 3 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 0, 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 4 )

[node name="Interaction" type="Area2D" parent="."]
position = Vector2( 0, 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction"]
shape = SubResource( 4 )

[node name="OnArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="OnArea"]
shape = SubResource( 5 )

[node name="DialogueTree" parent="." instance=ExtResource( 3 )]

[node name="DiagPiece" parent="DialogueTree" instance=ExtResource( 4 )]
message = "I don't think we have an account."
text_delay = 0.03
character = "orange"
function = "cancelled"
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
